# libadagio-plusplus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: main.cpp
src/animation/: SpriteAnimation.h  SpriteAnimationFrame.h  SpriteAnimationLibrary.cpp  SpriteAnimationLibrary.h
src/audio/: AbstractAudioLibrary.h  Audio.cpp  Audio.h  AudioDevice.h  AudioLibrary.h  AudioMetadata.h  AudioService.cpp  AudioService.h  PlayingSound.cpp  PlayingSound.h  PlayingSoundHandle.h  Sample.cpp  Sample.h  SoundModifierDevice.h  SoundPlayerDevice.h  Stream.cpp  Stream.h
src/backends/raylib/: RaylibFont.h  RaylibFontLoader.cpp  RaylibFontLoader.h  RaylibGamepadHandler.cpp  RaylibGamepadHandler.h  RaylibGraphicsDevice.cpp  RaylibGraphicsDevice.h  RaylibKeyboardHandler.cpp  RaylibKeyboardHandler.h  RaylibMouseHandler.cpp  RaylibMouseHandler.h  RaylibTexture.h  RaylibTextureLoader.cpp  RaylibTextureLoader.h
src/backends/soloud/: SoLoudStreamLoader.h  SoloudAudioDevice.cpp  SoloudAudioDevice.h  SoloudSampleLoader.cpp  SoloudSampleLoader.h  SoloudStreamLoader.cpp
src/event/: EventArg.h  Message.cpp  Message.h  MessageCollection.cpp  MessageCollection.h  MessageCollectionIterator.cpp  MessageCollectionIterator.h  MessageDispatchService.cpp  MessageDispatchService.h
src/game/: SandboxGame.cpp  SandboxGame.h
src/game/components/: CollisionRadius.h  Dead.h  Enemy.h  PlayerShip.h  Position.h  ShipRenderer.h  Sprite.h  SpriteAnimation.h  SpriteClip.h  SpriteRotation.h  SpriteScale.h  SpriteTint.h  UserProjectile.h  Velocity.h  WallopRenderer.h
src/game/components/events/: MessageInbox.h
src/game/components/events/hooks/: MessageInboxHooks.cpp  (+1 more)
src/game/factories/: LoadSprite.cpp  LoadSprite.h  MakeSpinny.cpp  MakeSpinny.h  MakeWallop.cpp  MakeWallop.h
src/game/muffins/: MuffinsGame.cpp  MuffinsGame.h
src/game/muffins/components/: Derpy.h
src/game/muffins/states/: FailState.h  GameplayState.cpp  GameplayState.h  TitleState.cpp  TitleState.h
src/game/muffins/systems/: DerpyFloat.cpp  DerpyFloat.h  FlashTimer.cpp  FlashTimer.h  FoodEvents.cpp  FoodEvents.h  FoodUpdate.cpp  FoodUpdate.h  RenderScore.h  UpdateParticles.cpp  UpdateParticles.h
src/game/states/: GracilisGame.cpp  GracilisGame.h  LeonaTestState.cpp  LeonaTestState.h
src/game/systems/: AnimateSprite.cpp  AnimateSprite.h  ApplyVelocity.cpp  ApplyVelocity.h  DetectCollision.h  EnemyEvents.cpp  EnemyEvents.h  RemoveDead.cpp  RemoveDead.h  RenderSprite.cpp  RenderSprite.h  ShipRendererSystem.cpp  ShipRendererSystem.h  TestTextRenderer.cpp  TestTextRenderer.h  Wallop.cpp  Wallop.h  WallopEvents.cpp  WallopEvents.h  WallopRendererSystem.cpp  WallopRendererSystem.h  ship.cpp  ship.h
src/graphics/: AbstractTextureManager.h  Color.cpp  Color.h  GraphicsDevice.h  RenderPool-impl.h  RenderPool.h  RenderState.cpp  RenderState.h  SpriteBatch.cpp  SpriteBatch.h  SpriteState.cpp  SpriteState.h  TextState.cpp  TextState.h  Texture2D.cpp  Texture2D.h  TextureDimensions.h  TextureLoader.h  TextureManager-impl.h  TextureManager.h
src/graphics/font/: AbstractFontManager.h  Font.cpp  Font.h  FontLoader.h  FontManager-impl.h  FontManager.h
src/include/adagio/: adagio.hpp  animation.hpp  audio.hpp  event.hpp  graphics.hpp  input.hpp  math.hpp  resource.hpp  state.hpp
src/include/adagio/backends/: raylib.hpp  soloud.hpp
src/include/adagio/components/: base.hpp  sprite.hpp
src/input/: InputService.cpp  InputService.h
src/input/actions/: ActionConstants.h  ActionState.cpp  ActionState.h
src/input/common/: ButtonBitState.h
src/input/gamepad/: GamepadCollection.cpp  GamepadCollection.h  GamepadHandler.h  GamepadState.cpp  GamepadState.h
src/input/keyboard/: KeyboardHandler.h  KeyboardState.cpp  KeyboardState.h
src/input/mouse/: MouseHandler.h  MouseState.cpp  MouseState.h
src/literals/: CrcLookup.h  HashString.h
src/math/: Rect-impl.hpp  Rect.h  Vector2-impl.hpp  Vector2.h
src/resource/: Asset.h  AssetLoader.h  InternalAssetWithSecret.h  PointerSafeAssetLoader.h  PointerSafeResourceLibrary.h  ResourceLibrary.h
src/state/: EntityGameState.cpp  EntityGameState.h  Game.cpp  Game.h  GameServices.h  GameState.cpp  GameState.h  GameStats.h  RenderingServices.h  Runner.cpp  Runner.h  StateMachine.cpp  StateMachine.h
test/: test.cpp
test/animation/: SpriteAnimationLibrary.test.cpp
test/audio/: Audio.test.cpp  AudioService.test.cpp
test/audio/mocks/: TestingAudioService.cpp  TestingAudioService.h  TestingSample.h  TestingStream.h
test/event/: EcsHooks.test.cpp  Message.test.cpp  MessageCollection.test.cpp  MessageDispatchService.test.cpp
test/game/: EcsTestingHarness.cpp  EcsTestingHarness.h
test/game/components/: MessageInbox.test.cpp
test/game/factories/: LoadSprite.test.cpp
test/game/harness/: EcsMockAudioDevice.cpp  EcsMockAudioDevice.h  EcsMockAudioLibrary.cpp  EcsMockAudioLibrary.h  EcsMockGraphicsDevice.cpp  EcsMockGraphicsDevice.h  EcsNullSoundLoader.cpp  EcsNullSoundLoader.h  MockFontLibrary.cpp  MockFontLibrary.h  MockGameStats.cpp  MockGameStats.h  MockTextureLibrary.cpp  MockTextureLibrary.h  NullSound.h
test/game/systems/: AnimateSprite.test.cpp  ApplyVelocity.test.cpp  DetectCollision.test.cpp  RenderSprite.test.cpp
test/game/systems/enemy/: EnemyEvents.test.cpp
test/game/systems/wallop/: WallopEvents.test.cpp
test/graphics/: Color.test.cpp  GraphicsDevice.test.cpp  MockGraphicsDevice.cpp  MockGraphicsDevice.h  SpriteBatch.test.cpp  TextureManager.test.cpp
test/graphics/font/: FontManager.test.cpp
test/input/: action.test.cpp  gamepad-collection.test.cpp  gamepad.test.cpp  input-service.test.cpp  keyboard.test.cpp  mouse.test.cpp
test/input/mocks/: MockGamepad.cpp  MockGamepad.h  MockInputs.h  MockKeyboard.cpp  MockKeyboard.h  MockMouse.cpp  MockMouse.h
test/literals/: HashString.test.cpp
test/math/: rect.test.cpp  vector2.test.cpp
test/state/: EntityGameState.test.cpp  Game.test.cpp  Runner.test.cpp  StateMachine.test.cpp
test/state/mocks/: EmptyGameState.cpp  EmptyGameState.h  MockStats.cpp  MockStats.h  TestGame.cpp  TestGame.h
